--- a/EqUiWebUi/Views/Shared/_Layout.cshtml
+++ b/EqUiWebUi/Views/Shared/_Layout.cshtml
@@ -48,8 +48,7 @@
 
                 <div class="nav pull-right">
                     <div class="cb_inline_block">
-                        
-                        <a href='@Url.Action("Settings", "Home")' class="nav navbar-text">
+                        <a href='@Url.Action("Settings", "Home", new { area = "" }, null)' class="nav navbar-text">
                             <img src="~/Content/images/icons8-settings-25.png" />
                         </a>
 
