--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/Workorders.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/Workorders.cshtml
@@ -101,7 +101,7 @@
 
                     </div>
                     <hr />
-                    <input type="submit" value="Load workorders" class="btn btn-success">
+                    <input type="submit" value="Load workorders" id="WorkorderSelectOptionsSubmit" class="btn btn-success">
                 </fieldset>
             </form>
 
@@ -129,7 +129,7 @@
         "showWeekNumbers": true,
         "showISOWeekNumbers": true,
         "ranges": {
-            'Today': [moment(), moment()],
+            'Yesterday': [moment().subtract(2, 'days'), moment().subtract(1,'days')],
             'Last 48 Hours': [moment().subtract(2, 'days'), moment()],
             'Last 7 Days': [moment().subtract(6, 'days'), moment()],
             'Last 30 Days': [moment().subtract(29, 'days'), moment()],
@@ -147,13 +147,16 @@
         $("#startdate").val(moment(start).format('YYYY-MM-DD HH:mm:ss'));
     });
 
-    //if loadOnInit = true  fold pannel and load
-    var loadOnInit = @(Json.Encode(ViewBag.loadOnInit ?? false));
-    if (loadOnInit == true) {
-        console.log("auto load");
-        //trigger submit
-        $("#Workorder").submit();
-        //fold up options pannel
 
-    }
+    //if loadOnInit = true  fold pannel and load
+    $(document).ready(function () {
+        var loadOnInit = @(Json.Encode(ViewBag.loadOnInit ?? false));
+        if (loadOnInit == true) {
+            console.log("auto load");
+            //trigger submit
+            $("#WorkorderSelectOptionsSubmit").trigger("click");
+            //fold up options pannel
+            $("#WorkorderSelectOptions").trigger("click");
+        }
+    });
 </script>
