--- a/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
+++ b/EqUiWebUi/Views/Gadata/PloegRapportWebgrid.cshtml
@@ -3,58 +3,77 @@
     ViewBag.Title = "PloegRapport";
 }
 
-    @Html.Action("_ploegRapport")
-    <div class="panel-footer">
-        <div class="row">
-            <div class="col-sm-6">
-                <p class="pull-right" id="PushInfo"> Last data push: ????</p>
-            </div>
+<div id="PloegRapportGridSpincontainer" style="position:relative">
+    <div id="PloegRapportGrid" class="mvc-grid"></div>
+</div>
+
+<div class="panel-footer">
+    <div class="row">
+        <div class="col-sm-6">
+            <p class="pull-right" id="PushInfo"> Last data push: ????</p>
         </div>
     </div>
+</div>
 
-    @*render popuover modal*@
-    <div id="MyModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
-        <div class="modal-content">Loading....</div>
-    </div>
+@*render popuover modal*@
+<div id="MyModal" class="modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+    <div class="modal-content">Loading....</div>
+</div>
 
-    <script type="text/javascript">
-    $(document).ready(function () {
-        //subscribe to row clicked events
-        $('#PloegRapport').mvcgrid({
-            sourceUrl: '@Url.Action("_ploegRapport")',
-            rowClicked: function (row, data, e) {
-
-
-            var urlMoreInfo = '@Url.Action("_Moreinfo","Gadata")?location=' + encodeURIComponent(data.Location)
-                        + '&errornum=' + encodeURIComponent(data.Logcode)
-                        + '&refid=' + encodeURIComponent(data.refId)
-                        + '&logtype=' + encodeURIComponent(data.Logtype)
-                        + '&logtext=' + encodeURIComponent(data.logtext)
-
-
-                //launch modal
+<!--ploegrapport script-->
+<script type="text/javascript">
+$(document).ready(function () {
+    var PloegRapportGridspinner = new Spinner();
+    //render grid and subscrible to row clicked events
+    $('#PloegRapportGrid').mvcgrid({
+        sourceUrl: '@Url.Action("_ploegRapport")', // Grid source url string
+        //query: '?search=test', // Grid query string
+        requestType: 'get', // Ajax grid request type
+        data: {
+                // Ajax grid query data
+        },
+        filters: {
+                // Grid filters to extend or use
+        },
+        reload: true, // Grid reload indicator
+        rowClicked: function (row, data, e) {
+                var urlMoreInfo = '@Url.Action("_Moreinfo","Gadata")?location=' + encodeURIComponent(data.Location)
+                            + '&errornum=' + encodeURIComponent(data.Logcode)
+                            + '&refid=' + encodeURIComponent(data.refId)
+                            + '&logtype=' + encodeURIComponent(data.Logtype)
+                            + '&logtext=' + encodeURIComponent(data.logtext)
+                    //launch modal
+                $('#MyModal').removeData('bs.modal');
+                $('#MyModal').html('<div class="modal-content">Loading....</div>');
                 $('#MyModal').modal({ remote: urlMoreInfo });
-            },
-            reloadEnded: function () {
-                //must call afther each reload end.
-                tableFormatLogtype(8);
-            },
-        });
-        //hide the navbar if in full screen
-        if ((screen.availHeight || screen.height - 30) <= window.innerHeight) {
-            // browser is almost certainly fullscreen
-           // Navbar(false);
+        },
+        reloadStarted: function () {
+            PloegRapportGridspinner.spin(document.getElementById('PloegRapportGridSpincontainer'));
+                // this - grid instance which invoked the event
+        },
+        reloadEnded: function () {
+            tableFormatLogtype(8);
+            PloegRapportGridspinner.stop();
+                // this - grid instance which invoked the event
+        },
+        reloadFailed: function (result) {
+            PloegRapportGridspinner.stop();
+            $("#PloegRapportGrid").html("Error while loading!!!");
+                // this - grid instance which invoked the event
+                // result - failed ajax response result
         }
-        //format table
-        tableFormatLogtype(8);
+    });
+
+
         //enable polling for new data
         CheckRefreshTable(5, '@Url.Action("PloegRapportcheckNewData")', '#PloegRapport');
         //on modal close
         $('#MyModal').on('hidden.bs.modal', function (e) {
-            $('#MyModal').html('<div class="modal-content">Loading....</div>');
+            $('#MyModal').html('<div class="modal-content">No content</div>');
         });
+
         //full with screen
         $("#allcontent").removeClass("body-content");
         $("#allcontent").removeClass("container");
     });
-    </script>
+</script>
