--- a/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
+++ b/EqUiWebUi/Areas/Maximo_ui/Views/Workorder/_workordersOnLocation.cshtml
@@ -4,7 +4,7 @@
 <div class="panel panel-primary">
     <div class="panel-heading">
         <h4 class="panel-title">Workorders</h4>
-        <a class="btn btn-xs" id="goToWorkordersHyperlink" href="">Go to workorders</a>
+        <a class="glyphicon glyphicon-new-window" id="goToWorkordersHyperlink" href=""> go to workorders</a>
         <span class="pull-right clickable"><i class="glyphicon glyphicon-chevron-up"></i></span>
     </div>
     <div class="panel-body">
